--- a/src/main/resources/static/oppgave1.html
+++ b/src/main/resources/static/oppgave1.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <title>JavaScript 1</title>
     <script type="text/javascript">
-        function visMelding() {
-            document.write("Hei verden");
+        function helloWorld() {
+            document.write("Hei verden!");
         }
     </script>
 </head>
 <body>
-<h2>Oppgave 1</h2>
-<p>Lag en HTML-knapp som kaller en JavaScript-funksjon som viser "Hei verden" på en blank side
-    via "document.write". Bruk hendelsen "onClick" på knappen.</p>
-<button onclick="visMelding()" ;>Trykk meg!</button>
+<h1>JavaScript 1</h1>
+<!--Making a section to have a structrue, can also use div-->
+<section>
+    <h2>Oppgave 1</h2>
+    <p>Lag en HTML-knapp som kaller en JavaScript-funksjon som viser "Hei verden" på en blank side
+        via "document.write". Bruk hendelsen "onClick" på knappen.</p>
+    <button onclick="helloWorld()";>Trykk meg!</button>
+</section>
+
 </body>
 </html>
