--- a/src/main/resources/static/oppgave2.html
+++ b/src/main/resources/static/oppgave2.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <title>JavaScript 1</title>
     <script type="text/javascript">
-        function visMelding() {
+        function helloAlert() {
             alert("Hei verden!");
         }
     </script>
 </head>
 <body>
-<h2>Oppgave 2</h2>
-<p>Gjør om oppgave 1 til å vise en "alert"-boks når knappen trykkes.</p>
-<button onclick="visMelding()" ;>Trykk meg</button>
+<h1>JavaScript 1</h1>
+<section>
+    <h2>Oppgave 2</h2>
+    <p>Gjør om oppgave 1 til å vise en "alert"-boks når knappen trykkes.</p>
+    <button onclick="helloAlert()" ;>Trykk meg</button>
+</section>
+
 </body>
 </html>
