--- a/src/main/resources/static/oppgave8.html
+++ b/src/main/resources/static/oppgave8.html
@@ -5,16 +5,19 @@
     <title>Title</title>
     <script type="text/javascript">
         const tall = 1;
-
         function visMelding() {
             console.log(tall);
         }
     </script>
 </head>
 <body>
-<h2>Oppgave 8</h2>
-<p>Lag et knapp som skriver tall “1” til console
-    (bruk console.log) hver gang den trykkes.</p>
-<button onclick="visMelding()">Trykk Meg</button>
+
+<section>
+    <h2>Oppgave 8</h2>
+    <p>Lag et knapp som skriver tall “1” til console
+        (bruk console.log) hver gang den trykkes.</p>
+    <button onclick="visMelding()">Trykk Meg</button>
+</section>
+
 </body>
 </html>
