--- a/src/main/resources/static/oppgave10.html
+++ b/src/main/resources/static/oppgave10.html
@@ -16,9 +16,13 @@
     </script>
 </head>
 <body>
-<h2>Oppgave 10</h2>
-<p>Endre oppgave 9 ved å legge til en melding til console slik at den viser
-    "Du har trykket på knappen X ganger" (hvor X er antall ganger knappen ble trykket på).</p>
-<button onclick="visMelding()">Trykk meg</button>
+
+<section>
+    <h2>Oppgave 10</h2>
+    <p>Endre oppgave 9 ved å legge til en melding til console slik at den viser
+        "Du har trykket på knappen X ganger" (hvor X er antall ganger knappen ble trykket på).</p>
+    <button onclick="visMelding()">Trykk meg</button>
+</section>
+
 </body>
 </html>
