--- a/src/main/resources/static/oppgave4.html
+++ b/src/main/resources/static/oppgave4.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script type="text/javascript"> //dette er JavaScript
-    function visNavn() {
+    function visNavn(data) {
         //siden det skal forandres, bruker vi datatypen let
-        let navnet = document.getElementById("inn").value;
-        alert(navnet)
+        alert(data)
     }
     </script>
 </head>
 <body>
-<h2>Oppgave 4</h2>
-<p>Endre oppgave 3 ved å legge ut en "pop-up/alert"-boks
-    som skal inneholde teksten fra input-feltet.</p>
-<p>Skriv inn navn:</p>
-<!--lage input-felt i en html-side-->
-<input type="text" onchange="visNavn()" id="inn"/>
-<div id="navn"></div>
-<!--lage JavaScriptet som leser dataene fra input-feltet-->
 
+<section>
+    <h2>Oppgave 4</h2>
+    <p>Endre oppgave 3 ved å legge ut en "pop-up/alert"-boks
+        som skal inneholde teksten fra input-feltet.</p>
+    <!--lage input-felt i en html-side-->
+    <label for="inn">Skriv inn navnet ditt</label>
+    <input onchange="visNavn(this.value)" type="text" id="inn"/>
+</section>
 
 </body>
 </html>
